* Some fixs (WriteLine) * Metadata

--- a/Ez_console/Ez console.csproj
+++ b/Ez_console/Ez console.csproj
@@ -6,6 +6,20 @@
     <Authors>Tom OLIVIER</Authors>
     <Copyright>Tom OLIVIER 2022</Copyright>
     <Description>Add colors and easily manage the console lines</Description>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
+    <RepositoryUrl>https://github.com/Tom60chat/Ez-console</RepositoryUrl>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\..\Hitman\LICENSE.txt">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Include="..\..\Hitman\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
 </Project>
