--- a/Ez_console/Ez console.csproj
+++ b/Ez_console/Ez console.csproj
@@ -9,6 +9,7 @@
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
     <RepositoryUrl>https://github.com/Tom60chat/Ez-console</RepositoryUrl>
+    <PackageId>Ez_console</PackageId>
   </PropertyGroup>
 
   <ItemGroup>
