--- a/Ez_console/Ez console.csproj
+++ b/Ez_console/Ez console.csproj
@@ -10,6 +10,9 @@
     <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
     <RepositoryUrl>https://github.com/Tom60chat/Ez-console</RepositoryUrl>
     <PackageId>Ez_console</PackageId>
+    <AssemblyVersion>1.0.1.0</AssemblyVersion>
+    <FileVersion>$(AssemblyVersion)</FileVersion>
+    <Version>$(AssemblyVersion)</Version>
   </PropertyGroup>
 
   <ItemGroup>
