* Bump to v1.2.0 for Ez_console and 1.1.0 for Ez_console.Console * Fixed crashs when the console was too small * Fixed WriteToLine writing more than the maximum number of lines with word wrap enabled

--- a/Ez_console/Ez console.csproj
+++ b/Ez_console/Ez console.csproj
@@ -10,13 +10,13 @@
     <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
     <RepositoryUrl>https://github.com/Tom60chat/Ez-console</RepositoryUrl>
     <PackageId>Ez_console</PackageId>
-    <AssemblyVersion>1.0.1.0</AssemblyVersion>
-    <FileVersion>$(AssemblyVersion)</FileVersion>
-    <Version>$(AssemblyVersion)</Version>
+    <AssemblyVersion>$(Version)</AssemblyVersion>
+    <FileVersion>$(Version)</FileVersion>
+    <Version>1.2.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="..\..\Hitman\LICENSE.txt">
+    <None Include="..\LICENSE.txt">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
